--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!--almeno tre righe, ogni riga 6 colonne, da mobile 1 per page, carosello o scorrimento animato is extra + immagine dei film che si allargano onhover-->
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
   </head>
   <body>
 
@@ -63,7 +68,30 @@
             </div>
           </nav>
     </header>
-    <main></main>
+
+    <main class="container my-3">
+        <section class="row">
+            <div class="col d-flex justify-content-start">
+                <h1 class="text-light me-1">TV Shows</h1>
+                <div class="dropdown my-auto ms-3">
+                    <a class="btn btn-secondary dropdown-toggle bg-transparent rounded-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Genres
+                    </a>                
+                    <ul class="dropdown-menu bg-dark rounded-1">
+                      <li><a class="dropdown-item text-light link-dark" href="#">Action</a></li>
+                      <li><a class="dropdown-item text-light link-dark" href="#">Horror</a></li>
+                      <li><a class="dropdown-item text-light link-dark" href="#">Comedy</a></li>
+                    </ul>
+                  </div>
+            </div>
+
+            <div class="col d-flex justify-content-end">
+                <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-list"></i></button>
+                <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-view-list"></i></button>
+            </div>
+        </section>
+    </main>
+
     <footer></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
