3main sections completed

--- a/homepage.html
+++ b/homepage.html
@@ -11,6 +11,7 @@
         body {
             background-color: black;
         }
+
     </style>
   </head>
   <body>
@@ -68,31 +69,188 @@
             </div>
           </nav>
     </header>
+<!-- fix h1 font-size mobile -->
+    <main class="my-3"> <!-- mx-2 mx-md-auto -->
+        <section class="container">
+            <div class="row">
+                <div class="col d-flex justify-content-start p-0">
+                    <h1 class="text-light me-1 mb-auto mb-0">TV Shows</h1>
+                    <div class="dropdown my-auto ms-3">
+                        <a class="btn btn-secondary dropdown-toggle bg-transparent rounded-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Genres
+                        </a>                
+                        <ul class="dropdown-menu bg-dark rounded-1">
+                          <li><a class="dropdown-item text-light link-dark" href="#">Action</a></li>
+                          <li><a class="dropdown-item text-light link-dark" href="#">Horror</a></li>
+                          <li><a class="dropdown-item text-light link-dark" href="#">Comedy</a></li>
+                        </ul>
+                      </div>
+                </div>
+    
+                <div class="col d-flex justify-content-end">
+                    <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-list"></i></button>
+                    <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-view-list"></i></button>
+                </div>
 
-    <main class="container my-3">
-        <section class="row">
-            <div class="col d-flex justify-content-start">
-                <h1 class="text-light me-1">TV Shows</h1>
-                <div class="dropdown my-auto ms-3">
-                    <a class="btn btn-secondary dropdown-toggle bg-transparent rounded-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Genres
-                    </a>                
-                    <ul class="dropdown-menu bg-dark rounded-1">
-                      <li><a class="dropdown-item text-light link-dark" href="#">Action</a></li>
-                      <li><a class="dropdown-item text-light link-dark" href="#">Horror</a></li>
-                      <li><a class="dropdown-item text-light link-dark" href="#">Comedy</a></li>
-                    </ul>
-                  </div>
-            </div>
-
-            <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-list"></i></button>
-                <button type="button" class="btn btn-outline-light rounded-1 my-auto"><i class="bi bi-view-list"></i></button>
             </div>
         </section>
+
+        <section class="container my-3">
+            <h2 class="text-light fs-4 my-3">Trending</h2>
+            <div class="row my-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media0.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media1.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media2.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media3.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media4.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media5.webp" alt="" class="w-100">
+                </div>
+            </div>
+        </section>
+        <section class="container my-3">
+            <h2 class="text-light fs-4 my-3">Watch It Again</h2>
+            <div class="row my-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media12.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media13.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media14.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media15.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media16.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media17.jpg" alt="" class="w-100">
+                </div>
+            </div>
+        </section>
+        <section class="container my-3">
+            <h2 class="text-light fs-4 my-3">New Releases</h2>
+            <div class="row my-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media6.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media7.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media8.webp" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media9.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media10.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                    <img src="/assets/media/media11.jpg" alt="" class="w-100">
+                </div>
+            </div>
+        </section>
+
     </main>
 
-    <footer></footer>
+
+    <footer class="my-3 p-3 d-flex flex-column bg-dark">
+        <div class="social d-flex justify-content-center">
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                <i class="bi bi-facebook text-light"></i>
+            </a>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                <i class="bi bi-instagram text-light"></i>
+            </a>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                <i class="bi bi-twitter text-light"></i>
+            </a>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                <i class="bi bi-youtube text-light"></i>
+            </a>
+        </div>
+        <div class="liste"></div>
+    </footer>
+
+<!--     <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
+        <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+            <div class="row my-auto">
+                <div class="col-12">
+                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
+                        <i class="bi bi-youtube"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-6 col-lg-2 offset-lg-1 mb-3">
+                <h5>Links</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="/">Home</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/examples/">Examples</a></li>
+                    <li class="mb-2"><a href="https://icons.getbootstrap.com/">Icons</a></li>
+                    <li class="mb-2"><a href="https://themes.getbootstrap.com/">Themes</a></li>
+                    <li class="mb-2"><a href="https://blog.getbootstrap.com/">Blog</a></li>
+                    <li class="mb-2"><a href="https://cottonbureau.com/people/bootstrap" target="_blank" rel="noopener">Swag Store</a></li>
+                </ul>
+                </div>
+                <div class="col-6 col-lg-2 mb-3">
+                <h5>Guides</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter template</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/getting-started/parcel/">Parcel</a></li>
+                    <li class="mb-2"><a href="/docs/5.3/getting-started/vite/">Vite</a></li>
+                </ul>
+                </div>
+                <div class="col-6 col-lg-2 mb-3">
+                <h5>Projects</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap" target="_blank" rel="noopener">Bootstrap 5</a></li>
+                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev" target="_blank" rel="noopener">Bootstrap 4</a></li>
+                    <li class="mb-2"><a href="https://github.com/twbs/icons" target="_blank" rel="noopener">Icons</a></li>
+                    <li class="mb-2"><a href="https://github.com/twbs/rfs" target="_blank" rel="noopener">RFS</a></li>
+                    <li class="mb-2"><a href="https://github.com/twbs/examples/" target="_blank" rel="noopener">Examples repo</a></li>
+                </ul>
+                </div>
+                <div class="col-6 col-lg-2 mb-3">
+                <h5>Community</h5>
+                <ul class="list-unstyled">
+                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues" target="_blank" rel="noopener">Issues</a></li>
+                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions" target="_blank" rel="noopener">Discussions</a></li>
+                    <li class="mb-2"><a href="https://github.com/sponsors/twbs" target="_blank" rel="noopener">Corporate sponsors</a></li>
+                    <li class="mb-2"><a href="https://opencollective.com/bootstrap" target="_blank" rel="noopener">Open Collective</a></li>
+                    <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5" target="_blank" rel="noopener">Stack Overflow</a></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+      </footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
