--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,7 @@
     <style>
         body {
             background-color: black;
+            height: 100vh;
         }
 
     </style>
@@ -98,22 +99,22 @@
         <section class="container my-3">
             <h2 class="text-light fs-4 my-3">Trending</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media0.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media1.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media2.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media3.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media4.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media5.webp" alt="" class="w-100">
                 </div>
             </div>
@@ -121,22 +122,22 @@
         <section class="container my-3">
             <h2 class="text-light fs-4 my-3">Watch It Again</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media12.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media13.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media14.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media15.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media16.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media17.jpg" alt="" class="w-100">
                 </div>
             </div>
@@ -144,22 +145,22 @@
         <section class="container my-3">
             <h2 class="text-light fs-4 my-3">New Releases</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media6.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media7.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media8.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media9.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media10.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media11.jpg" alt="" class="w-100">
                 </div>
             </div>
@@ -168,89 +169,55 @@
     </main>
 
 
-    <footer class="my-3 p-3 d-flex flex-column bg-dark">
-        <div class="social d-flex justify-content-center">
-            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                <i class="bi bi-facebook text-light"></i>
+    <!-- add text decorationon hover -->
+    <footer class="mt-3 py-3 d-flex flex-column bg-dark">
+        <div class="social d-flex mx-auto">
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none me-1" href="/" aria-label="Bootstrap">
+                <i class="bi bi-facebook text-secondary"></i>
             </a>
-            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                <i class="bi bi-instagram text-light"></i>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none me-1" href="/" aria-label="Bootstrap">
+                <i class="bi bi-instagram text-secondary"></i>
             </a>
-            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                <i class="bi bi-twitter text-light"></i>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none me-1" href="/" aria-label="Bootstrap">
+                <i class="bi bi-twitter text-secondary"></i>
             </a>
-            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                <i class="bi bi-youtube text-light"></i>
+            <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none me-1" href="/" aria-label="Bootstrap">
+                <i class="bi bi-youtube text-secondary"></i>
             </a>
         </div>
-        <div class="liste"></div>
+
+        <div class="liste d-flex mx-auto">
+            <div class="list1">
+                <ul>
+                    <li><a href="#" class="text-decoration-none text-secondary">Audio and Subtitles</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Media Center</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Privacy</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="list1">
+                <ul>
+                    <li><a href="#" class="text-decoration-none text-secondary">Audio and Subtitles</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Media Center</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Privacy</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="list1">
+                <ul>
+                    <li><a href="#" class="text-decoration-none text-secondary">Audio and Subtitles</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Media Center</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Privacy</a></li>
+                    <li><a href="#" class="text-decoration-none text-secondary">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="copyright d-flex flex-column mx-auto">
+            <button type="button" class="btn btn-outline-secondary mb-2">Service Code</button>
+            <p class="text-secondary mb-0">1197-2019 Netflix, inc</p>
+        </div>
     </footer>
-
-<!--     <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-        <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-            <div class="row my-auto">
-                <div class="col-12">
-                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                        <i class="bi bi-facebook"></i>
-                    </a>
-                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                        <i class="bi bi-twitter"></i>
-                    </a>
-                    <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="Bootstrap">
-                        <i class="bi bi-youtube"></i>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-                <h5>Links</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><a href="/">Home</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/examples/">Examples</a></li>
-                    <li class="mb-2"><a href="https://icons.getbootstrap.com/">Icons</a></li>
-                    <li class="mb-2"><a href="https://themes.getbootstrap.com/">Themes</a></li>
-                    <li class="mb-2"><a href="https://blog.getbootstrap.com/">Blog</a></li>
-                    <li class="mb-2"><a href="https://cottonbureau.com/people/bootstrap" target="_blank" rel="noopener">Swag Store</a></li>
-                </ul>
-                </div>
-                <div class="col-6 col-lg-2 mb-3">
-                <h5>Guides</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><a href="/docs/5.3/getting-started/">Getting started</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/examples/starter-template/">Starter template</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/getting-started/webpack/">Webpack</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/getting-started/parcel/">Parcel</a></li>
-                    <li class="mb-2"><a href="/docs/5.3/getting-started/vite/">Vite</a></li>
-                </ul>
-                </div>
-                <div class="col-6 col-lg-2 mb-3">
-                <h5>Projects</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap" target="_blank" rel="noopener">Bootstrap 5</a></li>
-                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev" target="_blank" rel="noopener">Bootstrap 4</a></li>
-                    <li class="mb-2"><a href="https://github.com/twbs/icons" target="_blank" rel="noopener">Icons</a></li>
-                    <li class="mb-2"><a href="https://github.com/twbs/rfs" target="_blank" rel="noopener">RFS</a></li>
-                    <li class="mb-2"><a href="https://github.com/twbs/examples/" target="_blank" rel="noopener">Examples repo</a></li>
-                </ul>
-                </div>
-                <div class="col-6 col-lg-2 mb-3">
-                <h5>Community</h5>
-                <ul class="list-unstyled">
-                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/issues" target="_blank" rel="noopener">Issues</a></li>
-                    <li class="mb-2"><a href="https://github.com/twbs/bootstrap/discussions" target="_blank" rel="noopener">Discussions</a></li>
-                    <li class="mb-2"><a href="https://github.com/sponsors/twbs" target="_blank" rel="noopener">Corporate sponsors</a></li>
-                    <li class="mb-2"><a href="https://opencollective.com/bootstrap" target="_blank" rel="noopener">Open Collective</a></li>
-                    <li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5" target="_blank" rel="noopener">Stack Overflow</a></li>
-                </ul>
-                </div>
-            </div>
-        </div>
-      </footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
