account page complete

--- a/homepage.html
+++ b/homepage.html
@@ -57,16 +57,16 @@
 
                 </div>
                 <div class="dropdown">
-                <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="/assets/avatar.png" alt="netflix logo" width="30" height="30">
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuLink">
-                  <li><a class="dropdown-item text-light link-dark" href="#">Profile</a></li>
-                  <li><a class="dropdown-item text-light link-dark" href="#">Notifications</a></li>
-                  <li><a class="dropdown-item text-light link-dark" href="#">Search</a></li>
-                  <li><a class="dropdown-item text-light link-dark" href="#">Settings</a></li>
-                </ul>
-              </div>
+                    <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/assets/avatar.png" alt="netflix logo" width="30" height="30">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item text-light link-dark" href="/profile.html">Profile</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="#">Notifications</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="http://www.google.com">Search</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="/settings.html">Settings</a></li>
+                    </ul>
+                </div>
             </div>
           </nav>
     </header>
