--- a/profile.html
+++ b/profile.html
@@ -6,10 +6,131 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!-- due colonne, una larga 3, una9 da dekstop, da mobile valgono 12 ciascuna -->
+<!--     <link rel="stylesheet" href="/assets/css/checkbox.css"> -->
+
+    <style>
+        body {
+            background-color: black;
+            height: 100vh;
+        }
+        .cr {
+            position: relative;
+            display: inline-block;
+            border: 1px solid #a9a9a9;
+            border-radius: .25em;
+            width: 1.3em;
+            height: 1.3em;
+/*             float: left; */
+            margin-right: .5em;
+        }
+
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+
+    <header>
+        <!-- add change color on hover -->
+        <nav class="navbar navbar-expand-md bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/homepage.html">
+                <img src="/assets/netflix_logo.png" alt="netflix logo" width="70" height="30">
+              </a>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                    <button class="border-0 bg-transparent mx-1">
+                        <a href="#" class="text-light"><i class="bi bi-search"></i></a>
+                    </button>
+
+                    <button class="border-0 bg-transparent mx-1">
+                        <a href="#" class="text-light"><i class="bi bi-bell-fill"></i></i></a>
+                    </button>
+
+                </div>
+                <div class="dropdown">
+                <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="/assets/avatar.png" alt="netflix logo" width="30" height="30">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuLink">
+                  <li><a class="dropdown-item text-light link-dark" href="#">Profile</a></li>
+                  <li><a class="dropdown-item text-light link-dark" href="#">Notifications</a></li>
+                  <li><a class="dropdown-item text-light link-dark" href="#">Search</a></li>
+                  <li><a class="dropdown-item text-light link-dark" href="#">Settings</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+
+    <main class="container">
+        <div class="row text-light">
+            <h1>Edit Profile</h1>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3 text-center p-2">
+                <img src="/assets/avatar.png" alt="profile pciture" class="w-75">
+                <!-- aggiungi tasto edit -->
+                 <!-- <span><i class="bi bi-pencil"></i></span> -->
+            </div>
+            <div class="col-12 col-md-9 p-2">
+                <form action="">
+                    <input type="text" value="Profile Name" class="rounded-0 bg-secondary text-light border-0 p-1 w-50 my-1 mb-2">
+                    <label for="language" class="d-block text-secondary fw-bold my-1">Language:</label>
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle bg-transparent rounded-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          English
+                        </a>                
+                        <ul class="dropdown-menu bg-dark rounded-1">
+                          <li><a class="dropdown-item text-light link-dark" href="#">English</a></li>
+                          <li><a class="dropdown-item text-light link-dark" href="#">Italiano</a></li>
+                          <li><a class="dropdown-item text-light link-dark" href="#">日本語</a></li>
+                        </ul>
+                    </div>
+
+                    <hr class="text-secondary">
+
+                    <label for="language" class="d-block text-secondary fw-bold my-1 fs-5">Maturity Settings:</label>
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle bg-secondary rounded-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          ALL MATURITY RATINGS
+                        </a>                
+                        <ul class="dropdown-menu bg-dark rounded-1">
+                          <li><a class="dropdown-item text-light link-dark" href="#">ALL MATURITY RATINGS</a></li>
+                          <li><a class="dropdown-item text-light link-dark" href="#">NO MATURITY RATINGS</a></li>
+                        </ul>
+                    </div>
+                    <p class="text-light my-2">Show titles of <span class="fw-bold">all maturity ratings</span> for this profile</p>
+
+                    <button type="button" class="btn btn-outline-light rounded-0 my-2">Edit</button>
+                    
+                    <hr class="text-secondary">
+
+                    <p class="fs-5 text-secondary fw-bold">Autoplay controls</p>
+                    <label class="d-block mt-2 text-light">
+                        <span class="cr"><i class="bi bi-check-lg text-secondary"></i></span>
+                        Autoplay next episode in a series on all devices.
+                    </label>
+                    <label class="d-block mb-2 text-light">
+                        <span class="cr"><i class="bi bi-check-lg text-secondary"></i></span>
+                        autoplay previews while drowsing on all devices.
+                    </label>
+                </form>
+                <hr class="text-secondary">
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <button type="button" class="btn btn-outline-light rounded-0 my-2 mx-3">SAVE</button>
+            <button type="button" class="btn btn-outline-light rounded-0 my-2 mx-3">CANCEL</button>
+            <button type="button" class="btn btn-outline-light rounded-0 my-2 mx-3">DELETE PROFILE</button>
+        </div>
+
+
+    </main>
+
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
