--- a/settings.html
+++ b/settings.html
@@ -6,9 +6,89 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <style>
+        body {
+            background-color: black;
+            height: 100vh;
+        }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <!-- add change color on hover -->
+        <nav class="navbar navbar-expand-md bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="/assets/netflix_logo.png" alt="netflix logo" width="70" height="30">
+              </a>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold text-light" href="#">TV Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">Movies</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">Recently Added</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-light" aria-current="page" href="#">My List</a>
+                    </li>
+                    </ul>
+
+
+                    <!-- right side -->
+                    <button class="border-0 bg-transparent mx-1">
+                        <a href="#" class="text-light"><i class="bi bi-search"></i></a>
+                    </button>
+                    <button class="border-0 bg-transparent mx-1">
+                        <a href="#" class="text-light text-decoration-none">KIDS</i></a>
+                    </button>
+                    <button class="border-0 bg-transparent mx-1">
+                        <a href="#" class="text-light"><i class="bi bi-bell-fill"></i></i></a>
+                    </button>
+
+                </div>
+                <div class="dropdown">
+                    <a class="btn btn-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="/assets/avatar.png" alt="netflix logo" width="30" height="30">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item text-light link-dark" href="/profile.html">Profile</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="#">Notifications</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="http://www.google.com">Search</a></li>
+                    <li><a class="dropdown-item text-light link-dark" href="/settings.html">Settings</a></li>
+                    </ul>
+                </div>
+            </div>
+          </nav>
+    </header>
+
+    <main class="container">
+        <div class="row text-light my-3">
+            <h1>Account</h1>
+            <hr class="my-1">
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3 text-start p-2">
+                <p class="fs-6 text-secondary fw-bold">MEMBERSHIP & BILLING</p>
+                <button type="button" class="btn btn-secondary rounded-0 px-4">Cancel Membership</button>
+            </div>
+            <div class="col col-md-9 p-2 d-flex justify-content-between">
+
+                    <p class="fs-8 text-light fw-bold">student@strive.school</p>
+
+                    <p><a class="link-opacity-100" href="#">Link opacity 100</a></p>
+
+            </div>
+        </div>
+
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
