settings page completed

--- a/settings.html
+++ b/settings.html
@@ -18,7 +18,7 @@
         <!-- add change color on hover -->
         <nav class="navbar navbar-expand-md bg-dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/homepage.html">
                 <img src="/assets/netflix_logo.png" alt="netflix logo" width="70" height="30">
               </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -74,17 +74,95 @@
             <hr class="my-1">
         </div>
         <div class="row">
-            <div class="col-12 col-md-3 text-start p-2">
+            <div class="col-12 col-md-3 text-center text-md-start p-2">
                 <p class="fs-6 text-secondary fw-bold">MEMBERSHIP & BILLING</p>
                 <button type="button" class="btn btn-secondary rounded-0 px-4">Cancel Membership</button>
             </div>
             <div class="col col-md-9 p-2 d-flex justify-content-between">
-
+                <div class="left">
                     <p class="fs-8 text-light fw-bold">student@strive.school</p>
-
-                    <p><a class="link-opacity-100" href="#">Link opacity 100</a></p>
-
+                    <p class="fs-8 text-secondary fw-bold">Password: *******</p>
+                    <p class="fs-8 text-secondary fw-bold">Phone: 123 123123</p>
+                    <hr class="my-1  text-light">
+                    <p class="fs-8 text-light fw-bold">admin@strive.school</p>
+                    
+                </div>
+                <div class="right text-end">
+                    <p><a class="link-opacity-100" href="#">Change account email</a></p>
+                    <p><a class="link-opacity-100" href="#">Change password</a></p>
+                    <p><a class="link-opacity-100" href="#">Change phone number</a></p>
+                    <hr class="my-1  text-light"> 
+                    <p><a class="link-opacity-100" href="#">Update payment info</a></p>
+                    <p><a class="link-opacity-100" href="#">Billing details</a></p>
+                    <hr class="my-1  text-light"> 
+                    <p><a class="link-opacity-100" href="#">Redeem gift card or pormo code</a></p>
+                    <p><a class="link-opacity-100" href="#">Where to buy gift cards</a></p>
+                </div>
             </div>
+            
+            <hr class="text-light">
+        </div>
+        <!-- plan details -->
+        <div class="row">
+            <div class="col-12 col-md-3 text-center text-md-start p-2">
+                <p class="fs-6 text-secondary fw-bold">PLAN DETAILS</p>
+            </div>
+            <div class="col col-md-9 p-2 d-flex justify-content-between">
+                <div class="left">
+                    <p class="fs-8 text-light fw-bold">Premium <i class="bi bi-badge-hd"></i></p>
+                </div>
+                <div class="right text-end">
+                    <p><a class="link-opacity-100" href="#">Change plan</a></p>
+
+                </div>
+            </div>
+            <hr class="text-light">
+        </div>
+        <!-- settings -->
+        <div class="row">
+            <div class="col-12 col-md-3 text-center text-md-start p-2">
+                <p class="fs-6 text-secondary fw-bold">SETTINGS</p>
+            </div>
+            <div class="col col-md-9 p-2 d-flex justify-content-between">
+                <div class="light">
+                    <p><a class="link-opacity-100" href="#">Parental controls</a></p>
+                    <p><a class="link-opacity-100" href="#">Test participation</a></p>
+                    <p><a class="link-opacity-100" href="#">Manage donwload devices</a></p>
+                    <p><a class="link-opacity-100" href="#">Activate a device</a></p>
+                    <p><a class="link-opacity-100" href="#">Recent device streaming activity</a></p>
+                    <p><a class="link-opacity-100" href="#">Siwn out of all devices</a></p>
+                </div>
+            </div>
+            <hr class="text-light">
+        </div>
+        <!-- my profile -->
+        <div class="row">
+            <div class="col-12 col-md-3 text-center text-md-start p-2">
+                <p class="fs-6 text-secondary fw-bold">MY PROFILE</p>
+            </div>
+            <div class="col col-md-9 p-2 d-flex justify-content-between">
+                <div class="left">
+                    <p class="fs-8 text-light fw-bold"> Strive student</p>
+                    <p><a class="link-opacity-100" href="#">Language</a></p>
+                    <p><a class="link-opacity-100" href="#">Playback settings</a></p>
+                    <p><a class="link-opacity-100" href="#">Subtitle appearance</a></p>
+
+                </div>
+                <div class="center">
+                    <p><a class="link-opacity-100" href="#"></a></p>
+                    <p><a class="link-opacity-100" href="#"></a></p>
+                    <p><a class="link-opacity-100" href="#"></a></p>
+                    <p><a class="link-opacity-100" href="#"></a></p>
+                    <p><a class="link-opacity-100" href="#"></a></p>
+                    <p><a class="link-opacity-100" href="#">Viewing activity</a></p>
+                    <p><a class="link-opacity-100" href="#">Ratings</a></p>
+                </div>
+                <div class="right text-end">
+                    <p><a class="link-opacity-100" href="#">Manage profiles</a></p>
+                    <p><a class="link-opacity-100" href="#">Add profile email</a></p>
+                </div>
+            </div>
+            <hr class="text-light">
         </div>
 
     </main>
