--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,6 @@
 
 
     <header>
-        <!-- add change color on hover -->
         <nav class="navbar navbar-expand-md bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/homepage.html">
@@ -55,7 +54,7 @@
                   <li><a class="dropdown-item text-light link-dark" href="#">Profile</a></li>
                   <li><a class="dropdown-item text-light link-dark" href="#">Notifications</a></li>
                   <li><a class="dropdown-item text-light link-dark" href="#">Search</a></li>
-                  <li><a class="dropdown-item text-light link-dark" href="#">Settings</a></li>
+                  <li><a class="dropdown-item text-light link-dark" href="/settings.html">Settings</a></li>
                 </ul>
               </div>
             </div>
