--- a/settings.html
+++ b/settings.html
@@ -11,11 +11,13 @@
             background-color: black;
             height: 100vh;
         }
+        .nav-item a:hover {
+            text-decoration: underline;
+        }
     </style>
   </head>
   <body>
     <header>
-        <!-- add change color on hover -->
         <nav class="navbar navbar-expand-md bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="/homepage.html">
@@ -46,10 +48,10 @@
                         <a href="#" class="text-light"><i class="bi bi-search"></i></a>
                     </button>
                     <button class="border-0 bg-transparent mx-1">
-                        <a href="#" class="text-light text-decoration-none">KIDS</i></a>
+                        <a href="#" class="text-light text-decoration-none">KIDS</a>
                     </button>
                     <button class="border-0 bg-transparent mx-1">
-                        <a href="#" class="text-light"><i class="bi bi-bell-fill"></i></i></a>
+                        <a href="#" class="text-light"><i class="bi bi-bell-fill"></i></a>
                     </button>
 
                 </div>
