adds container flex to main page

--- a/homepage.html
+++ b/homepage.html
@@ -99,7 +99,7 @@
             </div>
         </section>
 <!-- trending -->
-        <section class="container my-3">
+        <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">Trending</h2>
             <div class="row my-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
@@ -122,8 +122,8 @@
                 </div>
             </div>
         </section>
-<!-- watch it -->
-        <section class="container my-3">
+        <!-- watch it -->
+        <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">Watch It Again</h2>
             <div class="row my-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
@@ -147,7 +147,7 @@
             </div>
         </section>
         <!-- new release -->
-        <section class="container my-3">
+        <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">New Releases</h2>
             <div class="row my-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
