--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <title>Netflix demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <!--almeno tre righe, ogni riga 6 colonne, da mobile 1 per page, carosello o scorrimento animato is extra + immagine dei film che si allargano onhover-->
+    <link rel="stylesheet" href="/assets/css/animation.css">
     <style>
         body {
             background-color: black;
@@ -102,22 +102,22 @@
         <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">Trending</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0" id="selezione">
                     <img src="/assets/media/media0.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media1.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media2.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media3.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media4.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media5.webp" alt="" class="w-100">
                 </div>
             </div>
@@ -126,22 +126,22 @@
         <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">Watch It Again</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media12.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media13.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media14.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media15.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media16.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media17.jpg" alt="" class="w-100">
                 </div>
             </div>
@@ -150,22 +150,22 @@
         <section class="container-flex mx-5 my-3">
             <h2 class="text-light fs-4 my-3">New Releases</h2>
             <div class="row my-3">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media6.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media7.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media8.webp" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media9.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media10.jpg" alt="" class="w-100">
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
+                <div class="selezione col-12 col-sm-6 col-md-4 col-lg-2 px-0 mb-1 mb-md-0 mx-sm-0">
                     <img src="/assets/media/media11.jpg" alt="" class="w-100">
                 </div>
             </div>
